# ML-Model_General-Purpose

./: .gitignore  README.md  model.py  model_setup.py  pyproject.toml
src/ML_Model_General_Purpose_SudTheBud/: __init__.py  _model.py  _model_helper.py  _model_setup.py
